--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -13,8 +13,7 @@ color: white
 
 <a name="toro"></a>
 
-{% include speaker-card.html avatarurl="toro.jpg" profilename="Roberto Toro, PhD "  homepage="https://research.pasteur.fr/en/member/roberto-toro/" affiliation="Department of Neuroscience, Institut Pasteur,<br> Paris, France"%}
-
+{% include speaker-card.html avatarurl="toro.jpg" profilename="Roberto Toro, PhD "  homepage="https://research.pasteur.fr/en/member/roberto-toro/" affiliation="Department of Neuroscience, Institut Pasteur <br> Paris, France"%}
 
 #### Towards a collaborative neuroscience
 **Abstract:**
@@ -26,7 +25,8 @@ Roberto Toro graduated from a Master’s degree in Universidad Técnica Federico
 ---
 
 <a name="nat"></a>
-{% include speaker-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, MSc "   homepage="https://www.nataliabielczyk.com" affiliation="Solaris Research and Development Foundation, Nijmegen, The Netherlands" %}
+{% include speaker-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, MSc"   homepage="https://www.nataliabielczyk.com" affiliation="Solaris Research and Development Foundation <br> Nijmegen, The Netherlands" %}
+
 #### Open mentoring
 **Abstract:**
 One of the strongest movements in academia nowadays, is the Open Science movement. Its main postulates are: sharing access to high quality datasets with the general public and setting new standards for research reproducibility, e.g. by sharing codes and pipelines through open-access services such as GitHub. What else can and should we share in academia? Mentoring is one example of an asset which can also be shared between researchers all around the world. Today, it is no longer the case that mentoring experience can only be received from the direct supervisor; one can and should search out for advice from multiple researchers at every career stage, independently from geographical location - especially when there is little opportunity to be mentored in the local research environment.
@@ -37,6 +37,14 @@ Within the Organization for Human Brain Mapping Student and Postdoc Special Inte
 **Bio:**
 Natalia Bielczyk is now completing her thesis within the Donders Graduate School, Donders Institute for Brain, Cognition and Behavior, Nijmegen, the Netherlands. Her research concerns developing new methods for connectomics in the domain of cognitive neuroimaging, i.e. for functional and effective connectivity research. She also currently holds a position of a Career Development and Mentoring Manager within the Organization for Human Brain Mapping Student and Postdoc Special Interest Group (www.ohbmtrainees.com).
 
+___
+
+<a name="katja"></a>
+{% include speaker-card.html avatarurl="katja.png" profilename="Katja Heuer, PhD Candidate"   homepage="https://www.nataliabielczyk.com" affiliation="Max Planck Institute for Human Cognitive and Brain Sciences & Institut Pasteur <br> Paris, France" %}
+
+#### BrainBox
+**Abstract: TBA**
+**Bio: TBA**
 
 <!--
 <a name="geek"></a>
