--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -118,9 +118,11 @@ color: darkblue
 <p lang="en-US">15:00</p>
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{  dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">Tea-time break</span></p>
-</td>
+<td bgcolor="{{  lecture }}" width="127">
+<p lang="en-US"><span lang="en-US">Talks from:</span></p>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#katja">Katja Heuer</a></em>
+</span></p></td>
 <td bgcolor="{{  presentation2  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
 </td>
@@ -131,10 +133,9 @@ color: darkblue
 <p lang="en-US">16:00</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ lecture }}" width="127">
-<p lang="en-US"><span lang="en-US">Talks from:</span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em>
-</span></p></td>
+<td bgcolor="{{ dinner }}" width="127">
+<p lang="en-US"><span lang="en-US">Tea-time break</span></p>
+</td>
 <td bgcolor="{{  presentation1  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
 </td>
