--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -122,6 +122,7 @@ color: darkblue
 <p lang="en-US"><span lang="en-US">Talks from:</span></p>
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em>
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#katja">Katja Heuer</a></em>
+</span></p>
 </span></p></td>
 <td bgcolor="{{  presentation2  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
