--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -17,10 +17,10 @@ color: white
 
 #### Towards a collaborative neuroscience
 **Abstract:**
-Open Science is a recent movement aiming at giving researchers open access to datasets, tools, pipelines and publications. Science is no longer an ivory tower; it became more inclusive and transparent than ever before. How does research collaboration looks like in times of open science? In this presentation, I will be talking about new tools that we are building to help researchers all around the globe work together. I will also relate to my daily research, including three main research lines in my group: brain development, evolution and Autism Spectrum Disorders.
+Open Science is a recent movement aiming at giving researchers open access to datasets, tools, pipelines and publications. Science is no longer an ivory tower; it became more inclusive and transparent than ever before. How does research collaboration look like in times of open science? In this presentation, I will be talking about new tools that we are building to help researchers all around the globe work together. I will also relate to my daily research, including three main research lines in my group: brain development, evolution and Autism Spectrum Disorders.
 
 **Bio:**
-Roberto Toro graduated from a Master’s degree in Universidad Técnica Federico Santa María, Valparaiso, Chile (1997) and Pierre and Marie Curie University, Paris (1998) and obtained a PhD from Pierre and Marie Curie University, Paris (2003). Today, he is a Group Leader at the Institut Pasteur, Paris. Roberto is an expert in the domain of development and evolution of brain anatomy. In his research group, he utilizes mathematical modelling, Magnetic Resonance Imaging and human genetics. The team is oriented at developing computational neuroanatomy methods to analyse the normal diversity of human brain anatomy, and find differences associated with neurodevelopmental pathologies. Roberto is particularly interested in Autism Spectrum Disorders. Roberto is also highly engaged in the open science movement. He was a cofounder of the Brainhack community (Craddock et al., 2016) and he is an awardee of the Open Science Prize 2016 (worth 80k USD) for the Branbox project. He is also currently a member of the OHBM Open Science Special Interest Group, and the Co-Chair of the OHBM Hackathon.
+Roberto Toro graduated from a Master’s degree in Universidad Técnica Federico Santa María, Valparaiso, Chile (1997) and Pierre and Marie Curie University, Paris (1998) and obtained a PhD from Pierre and Marie Curie University, Paris (2003). Today, he is a Group Leader at the Institut Pasteur, Paris. Roberto is an expert in the domain of development and evolution of brain anatomy. In his research group, he utilizes mathematical modelling, Magnetic Resonance Imaging and human genetics. The team is oriented at developing computational neuroanatomy methods to analyse the normal diversity of human brain anatomy, and find differences associated with neurodevelopmental pathologies. Roberto is particularly interested in Autism Spectrum Disorders. Roberto is also highly engaged in the open science movement. He was a cofounder of the Brainhack community (Craddock et al., 2016) and he is an awardee of the Open Science Prize 2016 (worth 80k USD) for the BrainBox project. He is also currently a member of the OHBM Open Science Special Interest Group, and the Co-Chair of the OHBM Hackathon.
 
 ---
 
