--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -40,12 +40,26 @@ Natalia Bielczyk is now completing her thesis within the Donders Graduate School
 ___
 
 <a name="katja"></a>
-{% include speaker-card.html avatarurl="katja.png" profilename="Katja Heuer, PhD Candidate"   homepage="https://www.nataliabielczyk.com" affiliation="Max Planck Institute for Human Cognitive and Brain Sciences & Institut Pasteur <br> Paris, France" %}
+{% include speaker-card.html avatarurl="katja.png" profilename="Katja Heuer, PhD Candidate"  affiliation="Max Planck Institute for Human Cognitive and Brain Sciences & Institut Pasteur <br> Paris, France" %}
 
 #### BrainBox
+
 **Abstract: TBA**
 
 **Bio: TBA**
+
+___
+
+<a name="geek"></a>
+{% include speaker-card.html avatarurl="geek.png" profilename="Kamila Pendryk"   affiliation="Geek Girls Carrots <br> Warsaw, Poland" %}
+
+#### Financial negotiations
+
+**Abstract:**
+How do you start financial negotiations when you talk to a potential investor of your idea based on Hacking Carrots case study. Examples of conversations, tips that can be implemented in both work and startup environments. Each participant will gain detailed knowledge that they will be able to use in difficult conversations about money.
+
+**Bio:**
+Since 2012, she has been associated with the IT industry as a Project Manager. In July 2017, she defended the MBA title in the field of IT for the Polish-Japanese Academy of Information Technology in cooperation with Microsoft. For several years, she has been involved in organizations that support women in technologies. In the role of Marketing Director she introduced to the Polish market one of the largest brands among organizations supporting women in STEM. Currently permanently associated with GGC, she is responsible for the Hacking Carrots project. Privately, she is involved in charitable organizations, the dog-mum of two mongrels.
 
 <!--
 <a name="geek"></a>
