--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -39,7 +39,7 @@ The proposals can include various forms of a group activity, e.g., data analysis
 Connectomics have been used so far to look for quantifying global and local differences in the functional or structural brain networks [1], or alternatively, to simulate/study brain hemodynamics [2] . Very few studies have used connectomes to investigate the spreading of misfolded proteins which is at the basis of Parkinson's (PD) and Alzheimer's disease (AD) [3,4].
 It is believed that diseases as AD and PD are spread by misfolded proteins or agents which moves along brain connections (axons and dendrides of the neurons) starting from specific regions to others [5]. For instance, AD has a progression of tau pathology consistently beginning in the entorhinal cortex, the locus coeruleus, and other nearby noradrenergic brainstem nuclei, before spreading to the rest of the limbic system as well as the cacingulate and retrosplenial cortices. While Parkinsons starts from the brainstem and spread to the neocortex [5].
 A previous study investigated this mechanism on connectome comparing simulated tau deposits on connectome to those detected by PET scans specific for Alzheimer’s [3]. In this project, we aim at carrying out a similar study bu t for PD. In particular, we want to simulate deposits/spreading of alpha-syn proceeding via the brain’s anatomic connectivity network.
-We will use human and mice data provided by the supervisors. The main challenge of the project is defining a proper model of spreading along the connectome. Data from the PPMI dataset (https://www.ppmi-info.org/access-data-specimens/) and given by the project supervisors will be given. Those include case (PD patients) and control subjects along with clinical data and genetics.
+We will use human and mice data provided by the supervisors. The main challenge of the project is defining a proper model of spreading along the connectome. Data from the PPMI dataset ("https://www.ppmi-info.org/access-data-specimens/") and given by the project supervisors will be given. Those include case (PD patients) and control subjects along with clinical data and genetics.
 
 ![test image size]({{ site.url }}/img/projects/project1.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
@@ -335,7 +335,7 @@ Can gain experience with biosignal experimental setups.
 
 **Abstract:** Many active scientists use online social networks to share their research. Many of the ideas shaping modern science are disseminated this way. Online discussions between scientists precede and often shape what is published in journals.
 
-This project aims to map relations and mutual influence in online science communities. Psychology and neuroscience communities are especially interesting. These fields are accompanied by transient changes, due to replication crisis, open science movement and  many methodological debates  and advances. 
+This project aims to map relations and mutual influence in online science communities. Psychology and neuroscience communities are especially interesting. These fields are accompanied by transient changes, due to replication crisis, open science movement and  many methodological debates  and advances.
 
 Is it possible to map the structure of the field and “hot” topics using mostly Twitter data? How the information about publications spreads? What define that the paper will become popular (apart from scientific merit)? These questions are relevant not only for disciplines such as sociology of science. Also, answers could inform those, who want to share their research with others in the most effective way. P
 
