--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -44,11 +44,11 @@ We will use human and mice data provided by the supervisors. The main challenge 
 ![test image size]({{ site.url }}/img/projects/project1.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
 **A list of 1-5 key papers/materials summarising the subject**:
-1. Griffa, Alessandra, et al. "Structural connectomics in brain diseases." Neuroimage 80 (2013): 515-526. https://www.sciencedirect.com/science/article/pii/S1053811913004035
-2. Friston, Karl, Rosalyn Moran, and Anil K. Seth. "Analysing connectivity with Granger causality and dynamic causal modelling." Current opinion in neurobiology 23.2 (2013): 172-178. https://www.sciencedirect.com/science/article/pii/S0959438812001845
-3. Iturria-Medina, Yasser, et al. "Epidemic spreading model to characterize misfolded proteins propagation in aging and associated neurodegenerative disorders." PLoS computational biology 10.11 (2014): e1003956. https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003956
-4. Raj, Ashish, Amy Kuceyeski, and Michael Weiner. "A network diffusion model of disease progression in dementia." Neuron73.6 (2012): 1204-1215. https://www.sciencedirect.com/science/article/pii/S0896627312001353
-5. H. Braak et al., “Staging of brain pathology related to sporadic Parkinsons disease,” Neurobiology of aging, vol. 24, no. 2, pp. 197–211, 2003. https://www.sciencedirect.com/science/article/pii/S0197458002000659
+1. Griffa, Alessandra, et al. "Structural connectomics in brain diseases." Neuroimage 80 (2013): 515-526. [https://www.sciencedirect.com/science/article/pii/S1053811913004035](https://www.sciencedirect.com/science/article/pii/S1053811913004035)
+2. Friston, Karl, Rosalyn Moran, and Anil K. Seth. "Analysing connectivity with Granger causality and dynamic causal modelling." Current opinion in neurobiology 23.2 (2013): 172-178. [https://www.sciencedirect.com/science/article/pii/S0959438812001845](https://www.sciencedirect.com/science/article/pii/S0959438812001845)
+3. Iturria-Medina, Yasser, et al. "Epidemic spreading model to characterize misfolded proteins propagation in aging and associated neurodegenerative disorders." PLoS computational biology 10.11 (2014): e1003956. [https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003956](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003956)
+4. Raj, Ashish, Amy Kuceyeski, and Michael Weiner. "A network diffusion model of disease progression in dementia." Neuron73.6 (2012): 1204-1215. [https://www.sciencedirect.com/science/article/pii/S0896627312001353](https://www.sciencedirect.com/science/article/pii/S0896627312001353)
+5. H. Braak et al., “Staging of brain pathology related to sporadic Parkinsons disease,” Neurobiology of aging, vol. 24, no. 2, pp. 197–211, 2003. [https://www.sciencedirect.com/science/article/pii/S0197458002000659](https://www.sciencedirect.com/science/article/pii/S0197458002000659)
 
 **A list of requirements for taking part in the project:**  
 * minimum level of English and basic concept of connectomics,
@@ -123,7 +123,7 @@ Epilepsy is a highly prevalent disorder. 1% of all emergency department visits i
 2. Stam, C. J. (2014). Modern network science of neurological disorders. Nature Reviews Neuroscience, 15(10), 683.
 3. Stam, C. J., Nolte, G., & Daffertshofer, A. (2007). Phase lag index: assessment of functional connectivity from multi channel EEG and MEG with diminished bias from common sources. Human brain mapping, 28(11), 1178-1193.
 4. Bullmore, Ed, and Olaf Sporns. "Complex brain networks: graph theoretical analysis of structural and functional systems." Nature Reviews Neuroscience 10.3 (2009): 186.
-5. https://en.wikipedia.org/wiki/Epilepsy and https://en.wikipedia.org/wiki/Electroencephalography
+5. [https://en.wikipedia.org/wiki/Epilepsy](https://en.wikipedia.org/wiki/Epilepsy) and [https://en.wikipedia.org/wiki/Electroencephalography](https://en.wikipedia.org/wiki/Electroencephalography)
 6. Scheffer, Marten, et al. "Early-warning signals for critical transitions." Nature 461.7260 (2009): 53.
 
 **A list of requirements for taking part in the project:**
@@ -160,18 +160,18 @@ And, in the absence of any ethics commission for artificial neural networks, we 
 ![test image size]({{ site.url }}/img/projects/project4.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
 **A list of 1-5 key papers/materials summarising the subject:**
-1. Chris Olah et al., “Feature Visualization”, Distill, https://distill.pub/2017/feature-visualization/
-2. Jason Yosinski et al., “How transferable are features in deep neural networks?”, https://arxiv.org/abs/1411.1792  
-3. Radoslaw Martin Cichy et al., “Comparison of deep neural networks to spatio-temporal cortical dynamics of human visual object recognition reveals hierarchical correspondence”, https://www.nature.com/articles/srep27755  
-4. Daniel L. K. Yamins et al., “Performance-optimized hierarchical models predict neural responses in higher visual cortex”, https://www.pnas.org/content/111/23/8619
+1. Chris Olah et al., “Feature Visualization”, Distill, [https://distill.pub/2017/feature-visualization/](https://distill.pub/2017/feature-visualization/)
+2. Jason Yosinski et al., “How transferable are features in deep neural networks?”, [https://arxiv.org/abs/1411.1792](https://arxiv.org/abs/1411.1792)
+3. Radoslaw Martin Cichy et al., “Comparison of deep neural networks to spatio-temporal cortical dynamics of human visual object recognition reveals hierarchical correspondence”, [https://www.nature.com/articles/srep27755](https://www.nature.com/articles/srep27755)
+4. Daniel L. K. Yamins et al., “Performance-optimized hierarchical models predict neural responses in higher visual cortex”, [https://www.pnas.org/content/111/23/8619](https://www.pnas.org/content/111/23/8619)
 
 **A list of requirements for taking part in the project:**
 * I assume at least basic experience with programming and Python. If not yet, I gathered some materials there:
-https://p.migdal.pl/2016/03/15/data-science-intro-for-math-phys-background.html
+[https://p.migdal.pl/2016/03/15/data-science-intro-for-math-phys-background.html](https://p.migdal.pl/2016/03/15/data-science-intro-for-math-phys-background.html)
 * To get overview of deep learning for image classification, I suggest reading my blog post:
-https://p.migdal.pl/2017/04/30/teaching-deep-learning.html
+[https://p.migdal.pl/2017/04/30/teaching-deep-learning.html](https://p.migdal.pl/2017/04/30/teaching-deep-learning.html)
 * Please, read and run code (on Kaggle, Neptune or your local computer) for:
-https://deepsense.ai/keras-vs-pytorch-avp-transfer-learning/
+[https://deepsense.ai/keras-vs-pytorch-avp-transfer-learning/](https://deepsense.ai/keras-vs-pytorch-avp-transfer-learning/)
 * I really encourage you to try transfer learning (in either Keras or PyTorch) for a different dataset (pick any, e.g. chihuahua or muffin) and send screenshots of a few classified, and misclassified examples (along with their probabilities). In case there is more people interested in this project than spots, I will use it as a qualification criterion.
 * If you have any questions, feel invited to email me!
 
@@ -193,11 +193,11 @@ https://deepsense.ai/keras-vs-pytorch-avp-transfer-learning/
 **Abstract:**
 The objective of the project is to propose the method for predicting fluid intelligence in children from the T1-weighted MRI images. Work will most likely consist of data preprocessing, dimensionality reduction and fitting a regression model.
 First idea will be to apply methods like PCA for exploratory analysis and VAEs for nonlinear dimensionality reduction. Then we will use the space from VAEs to gaussian process regression and test different kernels. Of course, other approaches are also possible, depending on the preliminary results and the interest of the team.
-If successful, the aim is to submit the method to the ABCD Neurocognitive Prediction Challenge which is hold in conjugation with MICCAI 2019 conference. Preprocessed data is provided by the challenge organisers (requires registration in advance). More details about the problem and the data are available at: https://sibis.sri.com/abcd-np-challenge/ .
+If successful, the aim is to submit the method to the ABCD Neurocognitive Prediction Challenge which is hold in conjugation with MICCAI 2019 conference. Preprocessed data is provided by the challenge organisers (requires registration in advance). More details about the problem and the data are available at: [https://sibis.sri.com/abcd-np-challenge/](https://sibis.sri.com/abcd-np-challenge/).
 
 **A list of 1-5 key papers/materials summarising the subject:**
-1. Challenge website: https://sibis.sri.com/abcd-np-challenge/  (information about the challenge and how to register to access the data)
-2. Details about the data processing performed: https://www.biorxiv.org/content/early/2018/11/04/457739
+1. Challenge website: [https://sibis.sri.com/abcd-np-challenge/](https://sibis.sri.com/abcd-np-challenge/)  (information about the challenge and how to register to access the data)
+2. Details about the data processing performed: [https://www.biorxiv.org/content/early/2018/11/04/457739](https://www.biorxiv.org/content/early/2018/11/04/457739)
 3. 'Introduction to Neuroimaging Analysis’ – Oxford Neuroimaging Primers, Mark Jenkinson and Michael Chappell, Oxford University Press, 2017
 4. Some read about fluid intelligence
 
@@ -223,7 +223,7 @@ Hopefully, we can get group with varied skills and learn from each other skills 
 1.BrainAttach; Brain Tracking
 
 **Abstract:**
-In BCI, the environment is controlled by users through listening to active mental commands that need active effort and learning process. In this project, we are proposing a different paradigm where BCI algorithms listen to well-defined passive bottom-up processes like emotions and attention to choose/guess user preferred action. This approach is similar to Flying Mollusk work but we are proposing its further development and more specific emotions indicators as a starting point.
+In BCI, the environment is controlled by users through listening to active mental commands that need active effort and learning process. In this project, we are proposing a different paradigm where BCI algorithms listen to well-defined passive bottom-up processes like emotions and attention to choose/guess user preferred action. This approach is similar to [Flying Mollusk](https://www.flyingmollusk.com/) work but we are proposing its further development and more specific emotions indicators as a starting point.
 We are providing
 - 2 EEG setups with 2 channels (5 electrodes) and 1k Hz sampling
 - Web service that:
@@ -236,15 +236,15 @@ We are providing
 emotions, for controlling (or assisting) games and devices
 - Presentation of sample Python game reacting to emotions (cannon) and how to
 use indicator e.g shooting on BAS
-- Walk through Python game code http://www.grantjenks.com/docs/freegames/
+- Walk through Python game code [http://www.grantjenks.com/docs/freegames/](http://www.grantjenks.com/docs/freegames/)
 - Help with development, expanding and optimizing parameters (The “problem of
 multidimensionality and timescales”)
 - Brains tournament in cannon between teams (if time permits)
 
 **A list of 1-5 key papers summarising the subject:**
-1. http://gamestudies.org/1801/articles/david_melhart
-2. http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.96.352&rep=rep1&type=pdf
-3. https://www.ted.com/talks/mihaly_csikszentmihalyi_on_flow?language=en
+1. [http://gamestudies.org/1801/articles/david_melhart](http://gamestudies.org/1801/articles/david_melhart)
+2. [http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.96.352&rep=rep1&type=pdf](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.96.352&rep=rep1&type=pdf)
+3. [https://www.ted.com/talks/mihaly_csikszentmihalyi_on_flow?language=en](https://www.ted.com/talks/mihaly_csikszentmihalyi_on_flow?language=en)
 
 **A list of requirements for taking part in the project:**
 * English : communicative,
@@ -275,9 +275,9 @@ multidimensionality and timescales”)
 The human brain organization might be characterized by two basic properties: the segregation and the integration (Friston, 1994). While the functional segregation describes specialization of the brain areas or networks, the functional integration provides an insight on how information between specialized areas/networks is integrated. This second property is frequently studied by observing brain connectivity patterns. In recent years, one type of connectivity namely functional connectivity has gained a great attention. In fact, actually this concept is not directly associated with biologically-rooted connections (for example, long-range white matter tracts) but rather with the similarity between time-series of BOLD, EEG or other neuroimaging signals. It follows logic: if signals from two brain areas are similar, these two brain regions are involved in processing similar information and thus, they are functionally connected. Most often, such functional connections are assessed with measures like the Pearson correlation. However, relatively smaller number of studies deal with measures directly associated with temporal structures in the data (e.g. mutual information etc.). In our project, we would like to develop a method introduced by Lombardi et al. (2017) for estimating functional connectivity patterns known from the Dynamical Systems Theory - cross Recurrence Quantification Analysis (cRQA). cRQA is a method which find application in analyzing coupling dynamical systems such as social interactions in dyads, interdependence of EEG signals etc. It allows presenting complex interactions in the simple form of a vector of measures describing state-switching properties of time-series. Following observations by Lombardi et al. (2017), we aim to compare obtained connectivity patterns defined by the cRQA with connectivity patterns obtained with the Pearson Correlation. We will use task-fMRI data from procedures testing different cognitive and emotional processes as well as resting-state fMRI data taken from the Human Connectome Project database.
 
 **A list of 1-5 key papers summarising the subject:**
-1. Lombardi, A., Tangaro, S., Bellotti, R., Bertolino, A., Blasi, G., Pergola, G., … Guaragnella, C. (2017). A Novel Synchronization-Based Approach for Functional Connectivity Analysis. Complexity, 2017, 1–12. https://doi.org/10.1155/2017/7190758
-2. Marwan, N., & Webber, C. L. (2015). Mathematical and Computational Foundations of Recurrence Quantifications. In C. L. Webber, & N. Marwan (Eds.), Recurrence Quantification Analysis: Theory and Best Practices. Cham: Springer International Publishing. https://doi.org/10.1007/978-3-319-07155-8
-3. Bastos, A. M., & Schoffelen, J.-M. (2016). A Tutorial Review of Functional Connectivity Analysis Methods and Their Interpretational Pitfalls. Frontiers in Systems Neuroscience, 9(January), 1–23. https://doi.org/10.3389/fnsys.2015.00175
+1. Lombardi, A., Tangaro, S., Bellotti, R., Bertolino, A., Blasi, G., Pergola, G., … Guaragnella, C. (2017). A Novel Synchronization-Based Approach for Functional Connectivity Analysis. Complexity, 2017, 1–12. [https://doi.org/10.1155/2017/7190758](https://doi.org/10.1155/2017/7190758)
+2. Marwan, N., & Webber, C. L. (2015). Mathematical and Computational Foundations of Recurrence Quantifications. In C. L. Webber, & N. Marwan (Eds.), Recurrence Quantification Analysis: Theory and Best Practices. Cham: Springer International Publishing. [https://doi.org/10.1007/978-3-319-07155-8](https://doi.org/10.1007/978-3-319-07155-8)
+3. Bastos, A. M., & Schoffelen, J.-M. (2016). A Tutorial Review of Functional Connectivity Analysis Methods and Their Interpretational Pitfalls. Frontiers in Systems Neuroscience, 9(January), 1–23. [https://doi.org/10.3389/fnsys.2015.00175](https://doi.org/10.3389/fnsys.2015.00175)
 
 **A list of requirements for taking part in the project:**
 * Students from Bachelor degree level or higher
@@ -304,13 +304,13 @@ Yes
 
 **Abstract:**
 The daily usage of our computers can become daunting at times: we spend our days slouched by the keyboard. What if we could create a method for controlling the computer using gestures?
-The idea is to create a prototype for a wearable Human-Computer Interface (HCI) based on electromyography (EMG) signals. We will start off by gathering training data. Later through the use of Barachant's Minimum Distance to Mean (MDM) [https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf] algorithm we will attempt to classify some simple gestures. This will be handled by a raspberry pi if possible. Finally, a client on a target remote computer will capture the determined gestures and map them into useful actions like opening the browser etc.
+The idea is to create a prototype for a wearable Human-Computer Interface (HCI) based on electromyography (EMG) signals. We will start off by gathering training data. Later through the use of Barachant's Minimum Distance to Mean (MDM) ([https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf](https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf)) algorithm we will attempt to classify some simple gestures. This will be handled by a raspberry pi if possible. Finally, a client on a target remote computer will capture the determined gestures and map them into useful actions like opening the browser etc.
 
 This will require certain tasks to be performed: gathering of learning data, creating a classification model, building a client app to map the classified action.
 
 **A list of 1-5 key papers / online materials summarising the subject:**
-1. https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf,
-2. https://ieeexplore.ieee.org/abstract/document/1570513
+1. [https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf](https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf),
+2. [https://ieeexplore.ieee.org/abstract/document/1570513](https://ieeexplore.ieee.org/abstract/document/1570513)
 
 **A List of requirements for taking part in the project:**
 * Comfortable with python,
@@ -345,13 +345,13 @@ Further direction for the analysis will depend on participants and the availabil
 
 
 **A list of 1-6 key papers / online materials summarising the subject:**
-1. Example of mapping the field structure using published papers  https://homepage.univie.ac.at/noichlm94/posts/structure-of-recent-philosophy-ii/
+1. Example of mapping the field structure using published papers  [https://homepage.univie.ac.at/noichlm94/posts/structure-of-recent-philosophy-ii/](https://homepage.univie.ac.at/noichlm94/posts/structure-of-recent-philosophy-ii/)
 2. Example of mapping the networks of economist on twitter
-3. https://io.mongeau.net/repec-twitter-network/?fbclid=IwAR0Z07I_3FmGjTofeXa1omEACdxdcfHlxUE44J-W_yjLx7WWFBCvXMXUDjs
-4. Downloading  tweets: http://social-metrics.org/downloading-tweets-by-a-list-of-users-take2/
-5. Similar analyses in  humanities: http://journalofdigitalhumanities.org/1-3/the-impact-of-social-media-on-the-dissemination-of-research-by-melissa-terras/
-https://arxiv.org/pdf/1807.05571.pdf
-6. How to make a graph of  twitter followers: https://github.com/alumbreras/twitter-followers-graph
+3. [https://io.mongeau.net/repec-twitter-network/?fbclid=IwAR0Z07I_3FmGjTofeXa1omEACdxdcfHlxUE44J-W_yjLx7WWFBCvXMXUDjs](https://io.mongeau.net/repec-twitter-network/?fbclid=IwAR0Z07I_3FmGjTofeXa1omEACdxdcfHlxUE44J-W_yjLx7WWFBCvXMXUDjs)
+4. Downloading  tweets: [http://social-metrics.org/downloading-tweets-by-a-list-of-users-take2/](http://social-metrics.org/downloading-tweets-by-a-list-of-users-take2/)
+5. Similar analyses in  humanities: [http://journalofdigitalhumanities.org/1-3/the-impact-of-social-media-on-the-dissemination-of-research-by-melissa-terras/](http://journalofdigitalhumanities.org/1-3/the-impact-of-social-media-on-the-dissemination-of-research-by-melissa-terras/)
+[https://arxiv.org/pdf/1807.05571.pdf](https://arxiv.org/pdf/1807.05571.pdf)
+6. How to make a graph of  twitter followers: [https://github.com/alumbreras/twitter-followers-graph](https://github.com/alumbreras/twitter-followers-graph)
 
 **A List of requirements for taking part in the project:**
 * BSc program, or higher
