--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -5,6 +5,8 @@ color: white
 ---
 # Projects
 
+<a href="{{ url }}index.html#project1">Project 1: Misfolded protein spreading on brain connectome</a>
+
 <!-- ### **The submission of projects is officially closed.**
 Now we are waiting for an announcement which of the projects we have submitted this year will be fulfilled.
 -->
