--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -7,23 +7,23 @@ color: white
 
 ---
 
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#project1">Project 1: Misfolded protein spreading on brain connectome</a></em></span></p>
+<a href="{{ url }}index.html#project1">Project 1: Misfolded protein spreading on brain connectome</a>
 
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#project2">Project 2: Generating fake MRI to enhance Alzheimer’s disease prediction</a>
+<a href="{{ url }}index.html#project2">Project 2: Generating fake MRI to enhance Alzheimer’s disease prediction</a>
 
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#project3">Project 3: Network analysis of the electrical activity of the brain during epileptic seizures</a></em></span></p>
+<a href="{{ url }}index.html#project3">Project 3: Network analysis of the electrical activity of the brain during epileptic seizures</a>
 
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#project4">Project 4: Deep Frankenstein: dissecting and sewing artificial neural networks</a></em></span></p>
+<a href="{{ url }}index.html#project4">Project 4: Deep Frankenstein: dissecting and sewing artificial neural networks</a>
 
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#project5">Project 5: Tackling the ABCD Neurocognitive Prediction Challenge</a></em></span></p>
+<a href="{{ url }}index.html#project5">Project 5: Tackling the ABCD Neurocognitive Prediction Challenge</a>
 
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#project6">Project 6: Multidimensionality problem in passive BCI for game control</a></em></span></p>
+<a href="{{ url }}index.html#project6">Project 6: Multidimensionality problem in passive BCI for game control</a>
 
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#project7">Project 7: Cross-Recurrence Quantification Analysis (cRQA) as a new measure of functional connectivity</a></em></span></p>
+<a href="{{ url }}index.html#project7">Project 7: Cross-Recurrence Quantification Analysis (cRQA) as a new measure of functional connectivity</a>
 
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#project8">Project 8: EMG-based desktop controlling</a></em></span></p>
+<a href="{{ url }}index.html#project8">Project 8: EMG-based desktop controlling</a>
 
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#project9">Project 9: Mapping the state of modern psychology through the public online activity of scientists</a></em></span></p>
+<a href="{{ url }}index.html#project9">Project 9: Mapping the state of modern psychology through the public online activity of scientists</a>
 
 <!-- ### **The submission of projects is officially closed.**
 Now we are waiting for an announcement which of the projects we have submitted this year will be fulfilled.
