--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -51,7 +51,7 @@ ___
 ___
 
 <a name="geek"></a>
-{% include speaker-card.html avatarurl="geek.png" profilename="Kamila Pendryk"   affiliation="Geek Girls Carrots <br> Warsaw, Poland" %}
+{% include speaker-card.html avatarurl="geek.jpg" profilename="Kamila Pendyk"   affiliation="Geek Girls Carrots <br> Warsaw, Poland" %}
 
 #### Financial negotiations
 
