--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -48,7 +48,9 @@ The proposals can include various forms of a group activity, e.g., data analysis
 --->
 
 ---
-## <a id="project1"></a> Project 1: Misfolded protein spreading on brain connectome
+<a id="project1"></a>
+
+## Project 1: Misfolded protein spreading on brain connectome
 
 #### Authors: Alessandro Crimi, PhD<sup>1</sup> <a href="mailto:alessandro.crimi@usz.ch"><i class="fa fa-envelope"></i></a>  / Eleanna Kara <sup>2</sup>
 
@@ -85,6 +87,7 @@ We will use human and mice data provided by the supervisors. The main challenge 
 
 ---
 <a id="project2"></a>
+
 ## Project 2: Generating fake MRI to enhance Alzheimer's disease prediction
 
 #### Author: Sebastian  Gabriel Popescu, MPhil<sup>1</sup> <a href="mailto:s.popescu16@imperial.ac.uk"><i class="fa fa-envelope"></i></a>
@@ -122,6 +125,7 @@ Participants will be encouraged to develop their own classification pipeline, fo
 
 ---
 <a id="project3"></a>
+
 ## Project 3: Network analysis of the electrical activity of the brain during epileptic seizures
 
 #### Authors: Jarosław Klamut, MSc <sup>1</sup> <a href="mailto:jaroslaw.klamut@fuw.edu.pl"><i class="fa fa-envelope"></i></a> / Mateusz Wiliński, MSc <sup>2</sup>
@@ -163,6 +167,7 @@ Epilepsy is a highly prevalent disorder. 1% of all emergency department visits i
 
 ---
 <a id="project4"></a>
+
 ## Project 4: Deep Frankenstein: dissecting and sewing artificial neural networks
 
 #### Authors: Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com"><i class="fa fa-envelope"></i></a>  / Katarzyna Kańska <sup>2</sup>
@@ -204,6 +209,7 @@ And, in the absence of any ethics commission for artificial neural networks, we 
 
 ---
 <a id="project5"></a>
+
 ## Project 5: Tackling the ABCD Neurocognitive Prediction Challenge
 
 #### Authors: Hanna Nowicka <sup>1</sup> <a href="mailto:hn.nowicka@gmail.com"><i class="fa fa-envelope"></i></a>
@@ -236,6 +242,7 @@ Hopefully, we can get group with varied skills and learn from each other skills 
 
 ---
 <a id="project6"></a>
+
 ## Project 6: Multidimensionality problem in passive BCI for game control
 
 #### Authors: Maciej Rudziński <sup>1</sup> <a href="mailto:rudzinskimaciej@gmail.com"><i class="fa fa-envelope"></i></a> /Adrian Elczewski
@@ -284,6 +291,7 @@ multidimensionality and timescales”)
 
 ---
 <a id="project7"></a>
+
 ## Project 7: Cross-Recurrence Quantification Analysis (cRQA) as a new measure of functional connectivity
 
 #### Authors: Krzysztof Bielski <sup>1</sup> <a href="mailto:k.bielski@nencki.gov.pl"><i class="fa fa-envelope"></i></a> / Joanna Rączaszek-Leonardi <sup>2</sup>
@@ -316,6 +324,7 @@ Yes
 
 ---
 <a id="project8"></a>
+
 ## Project 8: EMG-based desktop controlling
 
 #### Authors: Paweł Pierzchlewicz <sup>1</sup> <a href="mailto:p.pierzchlewic@student.uw.edu.pl"><i class="fa fa-envelope"></i></a>
@@ -347,6 +356,7 @@ Can gain experience with biosignal experimental setups.
 
 ---
 <a id="project9"></a>
+
 ## Project 9: Mapping the state of modern psychology  through the  public online activity of scientists
 
 #### Authors: Daniel Borek <sup>1</sup> <a href="mailto:dtborek@ugent.be"><i class="fa fa-envelope"></i></a>
