--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -122,7 +122,7 @@ color: darkblue
 <p lang="en-US"><span lang="en-US">Talks from:</span></p>
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em>
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#katja">Katja Heuer</a></em>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#geek">Kamila Pendryk</a></em>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#geek">Kamila Pendyk</a></em>
 </span></p>
 </span></p>
 </span></p></td>
