--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -194,7 +194,7 @@ color: darkblue
 </td>
 <td bgcolor="{{  lecture  }}" width="118">
 <p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">TBA</a></em>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">Towards a collaborative neuroscience</a></em>
 </span></p></td>
 <td bgcolor="{{  dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">Dinner</span></p>
