--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -28,11 +28,7 @@ For your convenience we prepared a list of nice and friendly hotels where you ge
 * **Lwowska Hostel** - reservaation only by rezerwacja@hostellwowska11.pl, for 4-person room you get 55 PLN per person and 50 PLN per person in 6-person room on code: <u>Brainhack</u>
 * **Mish Mash Hostel** - reservation by mishmashhostel.com, for 1-3.03 and code <u>MMBrainhack2019</u> you get 10% discount
 * **Tatamka Hostel** - 10% discount on phone reservations with the password of <u>brainhack</u>
-
-
-<!--
-* Soundgarden Hotel -
--->
+* **Soundgarden Hotel** - on 1-3.03, a normal room without breakfast costs 190 PLN per night, for the password: <u>brainhack2019</u>. And [here](https://web.kamihq.com/web/viewer.html?source=extension_pdfhandler&extension_handler=webrequest_1_autoload_true_user_847809&file=https%3A%2F%2Fmail-attachment.googleusercontent.com%2Fattachment%2Fu%2F0%2F%3Fui%3D2%26ik%3D92bb2f4ad1%26attid%3D0.10%26permmsgid%3Dmsg-f%3A1623990371503119613%26th%3D168992a37c191cfd%26view%3Datt%26disp%3Dinline%26realattid%3D168992b97b1c109ec7ca%26saddbat%3DANGjdJ8cQCxYVkscos6r2yv7a2QXT_OmLQp2nT9txQ_T27uew-44J7AssVBJ6AVudyTrVFExBoDd_0-NGDCPTAfhVI32XAnFQpWY_uG2djpHtCjMifYdpkk9Uy4Gnoz92I0iJ4-j7b17v4DWeK1Dn7SuK-YbPfHtdNwXx5Ldhrx8mK4ED8vIvfYXRGG6XPGUFv4mUh1s71pSyohfj74mDVXqyfXykYdsViDtCyzELbswb8BrPttAnIDsu5TX1eFzQp6ithyi-pT_TsuWkIHKya6k63_Zqu1ZMiOI8Std8AaC0w3AUYTJu4xMlzxvDgJs-EHDDvKjq8ouWHgeiRwhUJS-_3kOGxW65NmQSQyr5wG8QHO5s9Odqy25QIXhxelJdRd5jDkokTDhv0zGNU0em2KkY2hzPbrlGGjmQBl8NYR_R3dL740ExEgdGMv0uv4OaMau_D0SL8izXSye-vZvOZUGMCNITYldV-QLeeE1grY160U0zkGVegjD4dxc3irdV5xYFL0KQr179AAaQnPHb65sB1G61p4mA0tpuwsyzNxIAe4h4RBlZHEmeSPltl2NUpMjH49mmltqxUQHnBc_mHI090s5FoYTbFP3nZS3nKC40yT3RqVcn0EY0TIynwDZ4_uCjAPmUX2WvSNUw3u7&filename=Instruction_promocode_reservation.pdf) is the instruction how to make a reservation using the code.
 
 
 <!--
